全生命页面添加

--- a/admin/index/data/network-sys/run_record.html
+++ b/admin/index/data/network-sys/run_record.html
@@ -27,11 +27,21 @@
     <div class="addBtn">
         <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
     </div>
-    <div class="hidden-xs"  id="moreBar">
+    <div class=" hidden-xs"  id="moreBar">
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-input-inline">
                 <input type="text" name="date" id="date" lay-verify="date" autocomplete="off" class="layui-input">
             </div>
+                <div class="layui-input-inline">
+                    <select name="modules" lay-search="">
+                        <option value="">输入状态标识</option>
+                        <option value="CT">CT室</option>
+                        <option value="HC">核磁公正室</option>
+                        <option value="SP">摄片室</option>
+                        <option value="DG">内外导管室</option>
+                        <option value="ICU">心外ICU</option>
+                    </select>
+                </div>
             <div class="layui-inline">
                 <input class="layui-input" name="search" placeholder="联网仪编号" autocomplete="off">
             </div>
@@ -103,7 +113,7 @@
         },
         date:{
             elem:"#date",
-            range:true
+            range:"-"
         }
     }
 </script>
