--- a/admin/index/data/network-sys/begin_record.html
+++ b/admin/index/data/network-sys/begin_record.html
@@ -130,7 +130,7 @@
         },
         date:{
             elem:"#date",
-            range:"~"
+            range:"-"
         }
     }
 </script>
