--- a/admin/index/data/network-sys/room_record.html
+++ b/admin/index/data/network-sys/room_record.html
@@ -23,7 +23,16 @@
 </div>
 
 <script type="text/html" id="toolBar">
-    <form class="layui-form layui-form-pane hidden-xs" action="">
+    <div class="mini_select">
+        <div class="layui-input-inline">
+            <select name="modules66" >
+                <option value="day">日</option>
+                <option value="month">月</option>
+                <option value="year">年</option>
+            </select>
+        </div>
+    </div>
+    <form class="layui-form layui-form-pane hidden-xs" id="moreBar" action="">
         <div class="layui-input-inline">
             <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
         </div>
