--- a/admin/index/life/purchase-management/purchase-discuss.html
+++ b/admin/index/life/purchase-management/purchase-discuss.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>科室讨论</title>
+    <title>申购单论证分析</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
@@ -13,46 +13,59 @@
     <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
     <script src="../../../../static/admin/js/basic.js"></script>
+    <style>
+        .layui-form-label{
+            width:145px!important;
+        }
+        .layui-input-block{
+            margin-left:145px!important;
+        }
+        .layui-form-text .layui-form-label{
+            width:100%!important;
+        }
+        .layui-form-text .layui-input-block{
+            margin-left:0!important;
+        }
+    </style>
 </head>
 
 <body>
 <form class="layui-form layui-form-pane" action="">
     <div class="layui-row">
         <fieldset class="layui-elem-field layui-field-title">
-            <legend>医学装备申购科室讨论记录表</legend>
+            <legend>医学装备论证</legend>
         </fieldset>
         <div class="col-xs-12 col-sm-6">
-            <div class="layui-form-item">
-                <label class="layui-form-label">时间<span class="sign">*</span></label>
+            <div class="layui-form-item" pane>
+                <label class="layui-form-label">申购单<span class="sign">*</span></label>
                 <div class="layui-input-block">
-                    <input type="text" name="date" id="date"  placeholder="2018-12-04" autocomplete="off" class="layui-input">
+                    <button type="button" class="layui-btn layui-btn-normal layui-btn-xs">选择</button>
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">地点<span class="sign">*</span></label>
+                <label class="layui-form-label">技术参数</label>
                 <div class="layui-input-block">
-                    <input type="text" name="title" autocomplete="off" class="layui-input">
+                    <textarea name="" rows="1" class="layui-textarea input_area"></textarea>
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">意见<span class="sign">*</span></label>
+                <label class="layui-form-label">技术评估</label>
                 <div class="layui-input-block">
-                    <input type="text" name="title" autocomplete="off" class="layui-input">
+                    <textarea name="" rows="1" class="layui-textarea input_area"></textarea>
                 </div>
             </div>
         </div>
-
         <div class="col-xs-12 col-sm-6">
-            <div class="layui-form-item" pane>
-                <label class="layui-form-label">记录人<span class="sign">*</span></label>
+            <div class="layui-form-item">
+                <label class="layui-form-label">临床要求及评价</label>
                 <div class="layui-input-block">
-
+                    <textarea name="" rows="1" class="layui-textarea input_area"></textarea>
                 </div>
             </div>
-            <div class="layui-form-item" pane>
-                <label class="layui-form-label">参加人员<span class="sign">*</span></label>
+            <div class="layui-form-item">
+                <label class="layui-form-label">售后反馈</label>
                 <div class="layui-input-block">
-
+                    <textarea name="" rows="1" class="layui-textarea input_area"></textarea>
                 </div>
             </div>
         </div>
@@ -60,14 +73,42 @@
     <div class="layui-row">
         <div class="col-xs-12">
             <div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">会议内容<span class="sign">*</span></label>
+                <label class="layui-form-label">选型理由</label>
                 <div class="layui-input-block">
-                    <textarea placeholder="请输入内容" class="layui-textarea"></textarea>
+                    <textarea placeholder="所选产品的特点、性价比、产品优势、同类生产厂家情况比较，厂商、代理商售后服务基本情况，独家经营生产的产品特别说明" class="layui-textarea"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">专家论证组意见</label>
+                <div class="layui-input-block">
+                    <textarea name="" rows="1" class="layui-textarea input_area"></textarea>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">专家签字</label>
+                <div class="layui-input-block">
+                    <input type="text" name="title" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+            <div class="layui-form-item">
+                <label class="layui-form-label">院领导意见</label>
+                <div class="layui-input-block">
+                    <textarea name="" rows="1" class="layui-textarea input_area"></textarea>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">院领导签字</label>
+                <div class="layui-input-block">
+                    <input type="text" name="title" autocomplete="off" class="layui-input">
                 </div>
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="layui-form-item" style="margin-left:35%;margin-top:25px">
+            <div class="layui-form-item subBtn">
                 <div class="layui-input-block">
                     <button class="layui-btn" lay-submit="" lay-filter="demo1">保存</button>
                     <button type="reset" class="layui-btn layui-btn-primary">重置</button>
