--- a/admin/index/repair.html
+++ b/admin/index/repair.html
@@ -221,8 +221,7 @@
                 <div class="layui-inline">
                     <label class="layui-form-label">约定维修时间</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd h:m:s"
-                               autocomplete="off" class="layui-input">
+                        <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd h:m:s" autocomplete="off" class="layui-input">
                     </div>
                 </div>
             </div>
