--- a/admin/index/table.html
+++ b/admin/index/table.html
@@ -33,20 +33,9 @@
 <script src="../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table', function () {
-        var table = layui.table;
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
+    addTable = {
+        table: {
+            cols: [[ //表头
                 {field: 'activity_name', title: '活动名', width: '53%', minWidth: 400, event: 'openLink'}
                 , {field: 'process_name', title: '流程名', minWidth: 150}
                 , {field: 'create_date', title: '创建日期', minWidth: 150, sort: true}
@@ -416,11 +405,10 @@
                 }
             ]
             , done: function (obj) {
-               // frame_all(obj,{"link":"table1"},{"message":[1]});//公共运行函数集合
+                // frame_all(obj,{"link":"table1"},{"message":[1]});//公共运行函数集合
             }
-        });
-
-    });
+        }
+    }
 </script>
 </body>
 
