--- a/admin/index/system/system-setup/information-search.html
+++ b/admin/index/system/system-setup/information-search.html
@@ -26,24 +26,6 @@
     <a class="layui-btn layui-btn-xs" layui-event="detail">查看</a>
 </script>
 <script type="text/html" id="toolBar">
-    <!--<form class="layui-form hidden-xs">-->
-        <!--<div class="test-table-reload-btn  h_tool">-->
-            <!--分类查询：-->
-            <!--<div class="layui-input-inline">-->
-                <!--<input class="layui-input" name="section-name" id="test-table-demoReload" autocomplete="off" placeholder="科室名称">-->
-            <!--</div>-->
-            <!--<div class="layui-input-inline">-->
-                <!--<input class="layui-input" name="spell" placeholder="设备名称拼音码" autocomplete="off">-->
-            <!--</div>-->
-            <!--<div class="layui-input-inline">-->
-                <!--<input class="layui-input" name="section-number" autocomplete="off" placeholder="设备编码">-->
-            <!--</div>-->
-            <!--<div class="layui-input-inline">-->
-                <!--<input class="layui-input" name="asset-number" autocomplete="off" placeholder="资产编码">-->
-            <!--</div>-->
-            <!--<button class="layui-btn" data-type="reload">搜索</button>-->
-        <!--</div>-->
-    <!--</form>-->
     <div class="addBtn">
         <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
     </div>
@@ -90,18 +72,7 @@ addTable ={
                 "asset-number": "99001734",
                 "device-name": "更衣柜（三门）",
                 "version": "富莱特",
-                "date":"2017-07-01",
-                "link":"./welcome.html",
-                "messages":[
-                    {
-                        name:"名称",
-                        value:"6666666"
-                    },
-                    {
-                        name:"时间",
-                        value:"666666668888"
-                    }
-                ]
+                "date":"2017-07-01"
             },{
                 "division": '病案室',
                 "device-number": "17070002500073",
