--- a/admin/index/system/system-setup/information-import.html
+++ b/admin/index/system/system-setup/information-import.html
@@ -35,7 +35,7 @@
     <div class="col-xs-12">
         <div class="layui-upload" style="margin-top:60px;">
             <button type="button" class="layui-btn layui-btn-normal" id="selectFile">选择文件</button>
-            <button type="button" class="layui-btn" id="startUploadFile">提交</button>
+            <button type="button" class="layui-btn" id="startUploadFile">提交文件</button>
         </div>
     </div>
 </div>
