--- a/admin/index/repair.html
+++ b/admin/index/repair.html
@@ -14,11 +14,6 @@
     <script type="text/javascript" src="../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
     <script src="../../static/admin/js/basic.js"></script>
-    <style>
-        .layui-form-label{
-            padding: 8px 10px!important;
-        }
-    </style>
 </head>
 
 <body>
@@ -27,7 +22,7 @@
         <div class="col-xs-12">
             <h1 style="margin:15px;">维修流程 - 胃肠外一科病区;TDP治疗机;17072682610001;报修受理</h1>
         </div>
-        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <fieldset class="layui-elem-field layui-field-title">
             <legend>报修单</legend>
         </fieldset>
         <div class="col-xs-12 col-sm-6">
@@ -167,7 +162,7 @@
         </div>
     </div>
     <div class="layui-row">
-        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <fieldset class="layui-elem-field layui-field-title">
             <legend>报修受理</legend>
         </fieldset>
         <div class="col-xs-12 col-sm-6">
@@ -302,7 +297,6 @@
         });
 
 
-        frame_all("back");
     });
 </script>
 </body>
