--- a/admin/index/index.html
+++ b/admin/index/index.html
@@ -138,17 +138,27 @@
     })
     $("#refresh_home").on('click',function(){
         var homes = document.getElementById('home') ;
-        if(!$("#refresh_home").hasClass("layui-this")){
+        if($("#refresh_home").hasClass("layui-this")){
             try{
                 homes.contentWindow.location.reload();
             }catch (er){
                 alert("当前页面显示不正确，可能会出现显示错乱，请使用服务器访问当前页面！");
                 console.error("此功能无法正常在本地使用，请使用服务器访问！");
             }
-
         }
-    })
+   })
     window.onload = function(){
+        //$(".layui-icon layui-unselect layui-tab-close").on('click',function(){
+            var homes = document.getElementById('home') ;
+            if($("#refresh_home").hasClass("layui-this")){
+                try{
+                    homes.contentWindow.location.reload();
+                }catch (er){
+                    alert("当前页面显示不正确，可能会出现显示错乱，请使用服务器访问当前页面！");
+                    console.error("此功能无法正常在本地使用，请使用服务器访问！");
+                }
+            }
+        //})
         // if($('.layui-nav-tree .layui-nav-child').length >0 && $('.layui-nav-tree .layui-nav-child').prev().children("span").length <= 0){
         //     location.reload();
         // }//判断当前页面渲染是否正确，不正确的话将刷新页面重新渲染
