--- a/admin/index/life/purchase-management/hos-record.html
+++ b/admin/index/life/purchase-management/hos-record.html
@@ -51,8 +51,7 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">会议时间</label>
                             <div class="layui-input-block">
-                                <input type="text" name="date" id="datet" lay-verify="date"
-                                       placeholder="yyyy-MM-dd h:m:s" autocomplete="off" class="layui-input">
+                                <input type="text" name="date" id="datet" lay-verify="date" placeholder="yyyy-MM-dd h:m:s" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
