--- a/admin/index/life/purchase-management/gather-audit.html
+++ b/admin/index/life/purchase-management/gather-audit.html
@@ -72,6 +72,9 @@
             , done: function (obj) {
                 //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
+        },
+        reSet:{
+            url:"./search.php"
         }
     }
 </script>
