--- a/admin/index/beneft/cost-benefit/cevenue-statistics.html
+++ b/admin/index/beneft/cost-benefit/cevenue-statistics.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>设备评价等级列表</title>
+    <title>收入统计</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <link rel="stylesheet" href="../../../../static/admin/css/all.min.css"/>
@@ -14,7 +14,18 @@
     <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
     <script src="../../../../static/admin/js/basic.js"></script>
-
+    <style>
+        .setW{
+            width: 80px;
+        }
+        .scorll{
+            overflow-x: scroll;
+            overflow-y: hidden;
+        }
+        .layui-this {
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,11 +42,20 @@
     <div class="visible-xs">
         <a class="layui-btn layui-btn-primary layui-btn-fluid layui-btn-sm" lay-event="dataSearch">数据检索</a>
     </div>
+    <div class="scorll">
+        <ul class="layui-tab-title">
+            <li class=""><a href="./analysis-evaluation.html">直接成本统计</a></li>
+            <li class=""><a href="./indirect-cost.html">间接成本统计</a></li>
+            <li class="layui-this"><a href="./cevenue-statistics.html">收入统计</a></li>
+            <li class=""><a href="./benefit-analysis.html">效益分析表</a></li>
+            <li class=""><a href="./benefit-statistics.html">效益评价表</a></li>
+        </ul>
+    </div>
     <div class="hidden-xs" id="hideXs">
         <div class="layui-row">
             <div class="col-xs-12" style="padding:0">
                 <form class="layui-form layui-form-pane maxCont" action="">
-                    <div class="layui-inline xs-100 mar10-0 pad0-10">
+                    <div class="layui-inline xs-100 mar10-0 pad0-10 setW">
                         <select>
                             <option disabled>日期类型</option>
                             <option>日</option>
@@ -44,23 +64,13 @@
                         </select>
                     </div>
                     <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <input type="text" name="date" id="date" class="layui-input" >
+                        <input type="text" name="date" id="date" lay-verify="date" autocomplete="off" class="layui-input">
                     </div>
                     <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <select>
-                            <option disabled>效益评价结果</option>
-                            <option selected>效益良好</option>
-                            <option>效益一般</option>
-                            <option>效益较差</option>
-                        </select>
+                        <input class="layui-input" name="search" placeholder="部门名称">
                     </div>
                     <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <select>
-                            <option>科室</option>
-                            <option>CT室</option>
-                            <option>核磁共振室</option>
-                            <option>摄片室</option>
-                        </select>
+                        <input class="layui-input" name="search" placeholder="设备名称">
                     </div>
                     <div class="layui-input-inline  xs-100 mar10-0 pad0-10">
                         <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="demo1">查找</button>
@@ -76,33 +86,32 @@
     addTable ={
         table:{
             cols: [[ //表头
-                {field: 'authorized_person', title: '使用科室', minWidth: 200}
-                , {field: 'authorized_depart', title: '设备编号', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '设备名称', minWidth: 200}
-                , {field: 'authorized_depart', title: '规格', minWidth: 200}
-                , {field: 'authorized_depart', title: '启用日期', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '使用年份', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '诊疗单位', minWidth: 200}
-                , {field: 'authorized_depart', title: '实际工作量', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '评价等级', minWidth: 200,sort:true}
+                {field: 'bmName', title: '部门名称', minWidth: 150}
+                , {field: 'eqName', title: '设备名称', minWidth: 150}
+                , {field: 'jcs', title: '检查室', minWidth: 100}
+                , {field: 'eqNum', title: '院内编号', minWidth: 200}
+                , {field: 'eqXh', title: '设备型号', minWidth: 150}
+                , {field: 'mzsr', title: '门诊收入', minWidth: 100,sort:true}
+                , {field: 'kjxmsr', title: '科教项目收入', minWidth: 100,sort:true}
+                , {field: 'zysr', title: '住院收入', minWidth: 100,sort:true}
+                , {field: 'qtsr', title: '其他收入', minWidth: 100,sort:true}
+                , {field: 'zj', title: '总计', minWidth: 150,sort:true}
             ]]
             , height: "full-25"
             , "data": [
                 {
-                    "authorized_person":"核磁共振室",
-                    "authorized_depart":"160232810001",
-                    "open_time":"MRI",
-                    "close_time":"设备1",
-                    "authorizer":"88888888",
-                    "time":"2018-12-1 00:00:00"
-                },{
-                    "authorized_person":"核磁共振室",
-                    "authorized_depart":"160232810001",
-                    "open_time":"MRI",
-                    "close_time":"设备1",
-                    "authorizer":"88888888",
-                    "time":"2018-12-1 00:00:00"
-                }]
+                    "bmName": "CT室",                 //部门名称
+                    "eqName": "测试型号1",            //设备名称
+                    "jcs": 0,                          //检查室
+                    "eqNum": "181268031101310000",    //院内编号
+                    "eqXh": "测试型号1",               //设备型号
+                    "mzsr": 3000,                       //门诊收入
+                    "kjxmsr": 100,                       //科教项目收入
+                    "zysr": 3000,                       //住院收入
+                    "qtsr": 200,                     //其他收入
+                    "zj": 6800                        //总计
+                }
+                ]
             , done: function (obj) {
                 tableFunc({
                     "obj":obj,
@@ -116,7 +125,8 @@
             }
         },
         date:{
-            elem:'#date'
+            elem:"#date",
+            range:"-"
         },
         form:{
 
