--- a/admin/index/beneft/cost-benefit/pacs-check.html
+++ b/admin/index/beneft/cost-benefit/pacs-check.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>设备评价等级列表</title>
+    <title>收入统计</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <link rel="stylesheet" href="../../../../static/admin/css/all.min.css"/>
@@ -14,7 +14,14 @@
     <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
     <script src="../../../../static/admin/js/basic.js"></script>
-
+    <style>
+        .setW{
+            width: 80px;
+        }
+        .setType{
+            width: 100px;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,32 +42,23 @@
         <div class="layui-row">
             <div class="col-xs-12" style="padding:0">
                 <form class="layui-form layui-form-pane maxCont" action="">
-                    <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <select>
-                            <option disabled>日期类型</option>
-                            <option>日</option>
-                            <option selected>月</option>
-                            <option>年</option>
+                    <div class="layui-inline xs-100 mar10-0 pad0-10 setType">
+                        <select name="modules" lay-verify="required" lay-search="">
+                            <option value="">病人类型</option>
+                            <option value="1">门诊</option>
+                            <option value="2">住院</option>
+                            <option value="3">体检</option>
                         </select>
                     </div>
                     <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <input type="text" name="date" id="date" class="layui-input" >
+                        <input class="layui-input" name="search" placeholder="设备标识">
                     </div>
                     <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <select>
-                            <option disabled>效益评价结果</option>
-                            <option selected>效益良好</option>
-                            <option>效益一般</option>
-                            <option>效益较差</option>
-                        </select>
+                        <input class="layui-input" name="search" placeholder="病人ID">
                     </div>
+                    <label>报告完成时间</label>
                     <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <select>
-                            <option>科室</option>
-                            <option>CT室</option>
-                            <option>核磁共振室</option>
-                            <option>摄片室</option>
-                        </select>
+                        <input type="text" name="date" id="date" lay-verify="date" autocomplete="off" class="layui-input">
                     </div>
                     <div class="layui-input-inline  xs-100 mar10-0 pad0-10">
                         <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="demo1">查找</button>
@@ -76,33 +74,30 @@
     addTable ={
         table:{
             cols: [[ //表头
-                {field: 'authorized_person', title: '使用科室', minWidth: 200}
-                , {field: 'authorized_depart', title: '设备编号', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '设备名称', minWidth: 200}
-                , {field: 'authorized_depart', title: '规格', minWidth: 200}
-                , {field: 'authorized_depart', title: '启用日期', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '使用年份', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '诊疗单位', minWidth: 200}
-                , {field: 'authorized_depart', title: '实际工作量', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '评价等级', minWidth: 200,sort:true}
+                {field: 'patientID', title: '病人ID', minWidth: 150,sort:true}
+                , {field: 'patientName', title: '病人姓名', minWidth: 150}
+                , {field: 'patientSex', title: '病人姓名', minWidth: 100}
+                , {field: 'patientType', title: '病人类型', minWidth: 200}
+                , {field: 'device-ident', title: '设备标识', minWidth: 150}
+                , {field: 'report-ftime', title: '报告完成时间', minWidth: 100}
+                , {field: 'check-oddnum', title: '检查单号', minWidth: 100}
+                , {field: 'check-project', title: '检查项目', minWidth: 100}
+                , {field: 'pro-price', title: '项目金额', minWidth: 100,sort:true}
             ]]
             , height: "full-25"
             , "data": [
                 {
-                    "authorized_person":"核磁共振室",
-                    "authorized_depart":"160232810001",
-                    "open_time":"MRI",
-                    "close_time":"设备1",
-                    "authorizer":"88888888",
-                    "time":"2018-12-1 00:00:00"
-                },{
-                    "authorized_person":"核磁共振室",
-                    "authorized_depart":"160232810001",
-                    "open_time":"MRI",
-                    "close_time":"设备1",
-                    "authorizer":"88888888",
-                    "time":"2018-12-1 00:00:00"
-                }]
+                    "patientID": "10001",                      //病人ID
+                    "patientName": "name",                    //病人姓名
+                    "patientSex": "男",                       //病人性别
+                    "patientType": "病人类型",               //病人类型
+                    "device-ident": "设备标识",              //设备标识
+                    "report-ftime": "报告完成时间",          //报告完成时间
+                    "check-oddnum": "检查单号",             //检查单号
+                    "check-project": "检查项目",            //检查项目
+                    "pro-price": 2000,                     //项目金额
+                }
+            ]
             , done: function (obj) {
                 tableFunc({
                     "obj":obj,
@@ -116,7 +111,8 @@
             }
         },
         date:{
-            elem:'#date'
+            elem:"#date",
+            range:"-"
         },
         form:{
 
