--- a/admin/index/beneft/usage-situation/average-time.html
+++ b/admin/index/beneft/usage-situation/average-time.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>设备评价等级列表</title>
+    <title>工作日平均闲置时间</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <link rel="stylesheet" href="../../../../static/admin/css/all.min.css"/>
@@ -14,7 +14,11 @@
     <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
     <script src="../../../../static/admin/js/basic.js"></script>
-
+    <style>
+        .setW{
+            width: 80px;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,7 +39,7 @@
         <div class="layui-row">
             <div class="col-xs-12" style="padding:0">
                 <form class="layui-form layui-form-pane maxCont" action="">
-                    <div class="layui-inline xs-100 mar10-0 pad0-10">
+                    <div class="layui-inline xs-100 mar10-0 pad0-10 setW">
                         <select>
                             <option disabled>日期类型</option>
                             <option>日</option>
@@ -47,19 +51,13 @@
                         <input type="text" name="date" id="date" class="layui-input" >
                     </div>
                     <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <select>
-                            <option disabled>效益评价结果</option>
-                            <option selected>效益良好</option>
-                            <option>效益一般</option>
-                            <option>效益较差</option>
-                        </select>
-                    </div>
-                    <div class="layui-inline xs-100 mar10-0 pad0-10">
-                        <select>
-                            <option>科室</option>
-                            <option>CT室</option>
-                            <option>核磁共振室</option>
-                            <option>摄片室</option>
+                        <select name="modules" lay-verify="required" lay-search="">
+                            <option value="">输入搜索部门</option>
+                            <option value="1">CT室</option>
+                            <option value="2">核磁公正室</option>
+                            <option value="3">摄片室</option>
+                            <option value="4">心内导管室</option>
+                            <option value="5">心外ICU</option>
                         </select>
                     </div>
                     <div class="layui-input-inline  xs-100 mar10-0 pad0-10">
@@ -76,32 +74,38 @@
     addTable ={
         table:{
             cols: [[ //表头
-                {field: 'authorized_person', title: '使用科室', minWidth: 200}
-                , {field: 'authorized_depart', title: '设备编号', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '设备名称', minWidth: 200}
-                , {field: 'authorized_depart', title: '规格', minWidth: 200}
-                , {field: 'authorized_depart', title: '启用日期', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '使用年份', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '诊疗单位', minWidth: 200}
-                , {field: 'authorized_depart', title: '实际工作量', minWidth: 200,sort:true}
-                , {field: 'authorized_depart', title: '评价等级', minWidth: 200,sort:true}
+                {field: 'equip_number', title: '设备编号',width:"25%",minWidth: 150}
+                ,{field: 'equip_name', title: '设备名称',width:"25%", minWidth: 150}
+                , {field: 'watch-time', title: '值班时长', minWidth: 150, sort: true}
+                , {field: 'unused-time', title: '闲置时长', minWidth: 150, sort: true}
+                , {field: 'average-idletime', title: '平均闲置时长', minWidth: 150, sort: true}
+                , {field: 'ranking', title: '排名', minWidth: 150, sort: true}
             ]]
             , height: "full-25"
             , "data": [
                 {
-                    "authorized_person":"核磁共振室",
-                    "authorized_depart":"160232810001",
-                    "open_time":"MRI",
-                    "close_time":"设备1",
-                    "authorizer":"88888888",
-                    "time":"2018-12-1 00:00:00"
-                },{
-                    "authorized_person":"核磁共振室",
-                    "authorized_depart":"160232810001",
-                    "open_time":"MRI",
-                    "close_time":"设备1",
-                    "authorizer":"88888888",
-                    "time":"2018-12-1 00:00:00"
+                    "equip_number": "65683289",
+                    "equip_name": "CT",
+                    "watch-time": "值班时长",
+                    "unused-time": "闲置时长",
+                    "average-idletime": "平均闲置时长",
+                    "ranking": "1"
+                }
+                ,{
+                    "equip_number": "65683289",
+                    "equip_name": "CT",
+                    "watch-time": "值班时长",
+                    "unused-time": "闲置时长",
+                    "average-idletime": "平均闲置时长",
+                    "ranking": "2"
+                }
+                ,{
+                    "equip_number": "65683289",
+                    "equip_name": "CT",
+                    "watch-time": "值班时长",
+                    "unused-time": "闲置时长",
+                    "average-idletime": "平均闲置时长",
+                    "ranking": "3"
                 }]
             , done: function (obj) {
                 tableFunc({
@@ -115,11 +119,8 @@
                 })
             }
         },
-        date:{
-            elem:'#date'
-        },
-        form:{
-
+        date :{
+            elem : "#date"
         }
     }
 </script>
