--- a/admin/index/beneft/cost-benefit/set-equipment-income.html
+++ b/admin/index/beneft/cost-benefit/set-equipment-income.html
@@ -95,14 +95,14 @@
                 tableFunc({
                     "obj":obj,
                     "toolFunc":[
-                        // {
-                        //     "tool":"toolbar",
-                        //     "filter":"table1",
-                        //     "event":"add",
-                        //     "title":"添加内容",
-                        //     "type":2,
-                        //     "content":"./child/set-equipmentcost-subject-add.html"
-                        // },
+                        {
+                            "tool":"toolbar",
+                            "filter":"table1",
+                            "event":"add",
+                            "title":"添加内容",
+                            "type":2,
+                            "content":"./child/set-equipmentcost-subject-add.html"
+                        },
                         {
                             tool:"toolbar",
                             title:"数据查找",
