--- a/admin/index/life/electric-bill/bill-hueman.html
+++ b/admin/index/life/electric-bill/bill-hueman.html
@@ -96,7 +96,7 @@
                         <input class="layui-input" name="search" placeholder="设备规格" autocomplete="off">
                     </div>
                     <div class="layui-input-inline  xs-100 mar10-0 pad0-10">
-                        <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="demo1">查找</button>
+                        <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="demo1" data-type="search">查找</button>
                     </div>
                 </form>
             </div>
