合并表单表格渲染代码（暂时保留了原始JS），优化文档结构，优化基础函数库

--- a/admin/index/welcome.html
+++ b/admin/index/welcome.html
@@ -13,11 +13,11 @@
             height: 100%;
         }
     </style>
-    <script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
-    <!--[if IE 8]>
+    <!--<script src="../../static/admin/js/jquery-3.3.1.min.js"></script>
+    &lt;!&ndash;[if IE 8]>
     <script type="text/javascript" src="../../static/admin/js/jquery-1.11.3.min.js"></script>
-    <![endif]-->
-    <script src="../../static/admin/js/basic.js"></script>
+    <![endif]&ndash;&gt;
+    <script src="../../static/admin/js/basic.js"></script>-->
 </head>
 <body>
 <div class="wrap-container welcome-container">
