--- a/admin/index/system/system-setup/bbtt-set.html
+++ b/admin/index/system/system-setup/bbtt-set.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>LOGO设置</title>
+    <title>报表抬头设置</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
@@ -57,9 +57,7 @@
         $("button[lay-filter='submit']").on('click',function(){
             JQajax({
                 url:"/logo/setLogo",
-                data:{name:"logoFile",file:$("input[name='logoFile']").val()},
-                processData:false,
-                contentType:"multipart/form-data",
+                data:{"logoFile":$("input[name='logoFile']").val()},
                 method:"POST"
             })
         })
